Fixed vertical alignment of button in the CTA section. #3

--- a/styles/components/buttons.css
+++ b/styles/components/buttons.css
@@ -14,4 +14,5 @@ button.sign-up {
 button.sign-up-body {
   padding: 0.5em 0;
   width: calc(25% - 10px);
+  vertical-align: bottom;
 }
